--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
   <div class="spacer"></div>
   <a mat-button routerLink="">Incio</a>
-  <a mat-button routerLink="">Actores</a>
+  <a mat-button routerLink="actor">Actores</a>
   <a mat-button routerLink="">Temas</a>
   <a mat-button routerLink="">Colaborativo</a>
   <a mat-button routerLink="about">Info</a>
