--- a/targeting/src/app/actor/actor.component.html
+++ b/targeting/src/app/actor/actor.component.html
@@ -21,10 +21,25 @@
             <th mat-header-cell *matHeaderCellDef> ID. </th>
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
+
+          <ng-container matColumnDef="nivel">
+            <th mat-header-cell *matHeaderCellDef> Nivel. </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
        
           <!-- Name Column -->
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="prioridad">
+            <th mat-header-cell *matHeaderCellDef> Prioridad </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="comentario">
+            <th mat-header-cell *matHeaderCellDef> Comentario </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
        
