--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <div class="spacer"></div>
   <a mat-button routerLink="">Incio</a>
   <a mat-button routerLink="actor">Actores</a>
-  <a mat-button routerLink="">Temas</a>
+  <a mat-button routerLink="theme">Temas</a>
   <a mat-button routerLink="">Colaborativo</a>
   <a mat-button routerLink="about">Info</a>
 </mat-toolbar>
