--- a/targeting/src/app/theme/theme.component.html
+++ b/targeting/src/app/theme/theme.component.html
@@ -1,1 +1,54 @@
-<p>theme works!</p>
+<table mat-table
+       [dataSource]="dataSource" multiTemplateDataRows
+       class="mat-elevation-z8">
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="deleteButton" >
+    <th mat-header-cell *matHeaderCellDef > </th>
+    <td mat-cell *matCellDef="let row"> <button mat-button>Sub Actor</button><button mat-button>Edit</button><button mat-button>Delete</button></td>
+  </ng-container>
+  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+      <div class="example-element-detail"
+          [@detailExpand]="checkExpanded(element) ? 'expanded' : 'collapsed'">
+        <div class="example-element-diagram">
+          <div class="example-element-position"> {{element.position}} </div>
+          <div class="example-element-symbol"> {{element.symbol}} </div>
+          <div class="example-element-name"> {{element.name}} </div>
+          <div class="example-element-weight"> {{element.weight}} </div>
+        </div>
+        <div class="example-element-description">
+          {{element.description}}
+          <span class="example-element-description-attribution"> -- Wikipedia </span>
+        </div>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay.concat(['deleteButton'])"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay.concat(['deleteButton']);"
+      class="example-element-row"
+      [class.example-expanded-row]="checkExpanded(element)"
+      (click)="pushPopElement(element)">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
+
+
+<!-- Copyright 2019 Google Inc. All Rights Reserved.
+    Use of this source code is governed by an MIT-style license that
+    can be found in the LICENSE file at http://angular.io/license 
+
+
+    <ng-container matColumnDef="deleteButton" >
+        <th mat-header-cell *matHeaderCellDef > </th>
+        <td mat-cell *matCellDef="let row"> <button mat-button>Sub Actor</button><button mat-button>Edit</button><button mat-button>Delete</button></td>
+    </ng-container>
+
+    .concat(['deleteButton'])
+
+-->
