--- a/targeting/src/app/actor/actor.component.html
+++ b/targeting/src/app/actor/actor.component.html
@@ -21,35 +21,37 @@
             <th mat-header-cell *matHeaderCellDef> ID. </th>
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
-
-          <ng-container matColumnDef="nivel">
-            <th mat-header-cell *matHeaderCellDef> Nivel. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          </ng-container>
        
           <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
           </ng-container>
 
           <ng-container matColumnDef="prioridad">
             <th mat-header-cell *matHeaderCellDef> Prioridad </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.prioridad}} </td>
           </ng-container>
 
           <ng-container matColumnDef="comentario">
             <th mat-header-cell *matHeaderCellDef> Comentario </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.comentario}} </td>
           </ng-container>
        
           <!-- Action Column -->
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element" class="action-link">
-              <button mat-flat-button color="primary" (click)="openDialog('Update',element)">Edit</button>
-              <button mat-flat-button color="primary" (click)="openDialog('Delete',element)">Delete</button>
+              <button mat-flat-button color='primary' (click)="openDialog('Add',{})">Add</button>
+              <button mat-flat-button color='accent' (click)="openDialog('Update',element)">Edit</button>
+              <button mat-flat-button color='warn' (click)="openDialog('Delete',element)">Delete</button>
             </td>
+          </ng-container>
+
+          <ng-container matColumnDef="expandedDetail">
+            <mat-cell *matCellDef="let detail"> 
+              The symbol for {{detail.element.name}} is {{detail.element.symbol}}
+            </mat-cell>
           </ng-container>
        
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
