--- a/targeting/src/app/about/about.component.html
+++ b/targeting/src/app/about/about.component.html
@@ -4,7 +4,7 @@ idMapping ="taskId" parentIdMapping= "parentId"
 [allowPaging]="true" 
 [pageSettings]="pageSettings" [allowSorting]="true" 
 [editSettings]="editSettings"[allowFiltering]="true"
-[toolbar]="toolbar">
+[toolbar]="toolbar" (actionBegin)="actionBegin($event)">
     <e-columns>
         <e-column
         field="taskId"
@@ -21,7 +21,7 @@ idMapping ="taskId" parentIdMapping= "parentId"
         ></e-column>
         <e-column
         field="startDate"
-        headerText="Start Name"
+        headerText="Start Date"
         textAlign="Right"
         width= "100"
         format="yMd"
@@ -29,7 +29,7 @@ idMapping ="taskId" parentIdMapping= "parentId"
         ></e-column>
         <e-column
         field="endDate"
-        headerText="End Name"
+        headerText="End Date"
         textAlign="Right"
         width= "100"
         format="yMd"
@@ -57,11 +57,12 @@ idMapping ="taskId" parentIdMapping= "parentId"
         width= "90"
         ></e-column>
     </e-columns>
-    <ng-template #editSettingsTemplate let-date>
+    <ng-template #editSettingsTemplate let-data>
         <div ngform>
             <div class="form-group">
                 <div class="e-float-input e-control-wrapper">
-                    <input type="number" name="taskId" />
+                    <input type="number" name="taskId" [ngModel]="taskData.taskId" 
+                    [attr.disabled]="!data.isAdd ? '': null"/>
                     <label class="e-float-text e-label-top" for="taskId">
                         Task Id
                     </label>
@@ -69,27 +70,47 @@ idMapping ="taskId" parentIdMapping= "parentId"
             </div>
             <div class="form-group">
                 <div class="e-float-input e-control-wrapper">
-                    <input type="text" name="taskName" />
+                    <input type="text" name="taskName" [ngModel]="taskData.taskName"/>
                     <label class="e-float-text e-label-top" for="taskName">
                         Task Name
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <ejs-numerictextbox      
-                    name="progress"
-                    placeholder= "Progress"
-                    floatLabelType = "Always">
-                </ejs-numerictextbox>
-            </div>
-            <div class="form-group">
                 <ejs-datepicker      
                     name="startDate"
                     placeholder= "Start Date"
-                    floatLabelType = "Always">
+                    floatLabelType = "Always"
+                    [ngModel]="taskData.startDate"
+                    >  
                 </ejs-datepicker>
             </div>
-            
+            <div class="form-group">
+                <ejs-datepicker      
+                    name="endDate"
+                    placeholder= "End Date"
+                    floatLabelType = "Always"
+                    [ngModel]="taskData.endDate"
+                    >   
+                </ejs-datepicker>
+            </div>
+            <div class="form-group">
+                <ejs-numerictextbox      
+                    name="duration"
+                    placeholder= "Duration"
+                    floatLabelType = "Always"
+                    [ngModel]="taskData.duration"
+                    >
+                </ejs-numerictextbox>
+            </div>
+            <div class="form-group">
+                <div class="e-float-input e-control-wrapper">
+                    <input type="text" name="priority" [ngModel]="taskData.priority"/>
+                    <label class="e-float-text e-label-top" for="priority">
+                        Priority
+                    </label>
+                </div>
+            </div>
         </div>
     </ng-template>
 </ejs-treegrid>
