--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -3,8 +3,10 @@
 
   <div class="spacer"></div>
   <a mat-button routerLink="">Incio</a>
-  <a mat-button routerLink="actor">Actores</a>
+  <a mat-button routerLink="actores">Actores</a>
   <a mat-button routerLink="theme">Temas</a>
   <a mat-button routerLink="">Colaborativo</a>
   <a mat-button routerLink="about">Info</a>
+  <a mat-button routerLink="list">List</a>
+  <a mat-button routerLink="create">List</a>
 </mat-toolbar>
