--- a/targeting/src/app/link-list/link-list.component.html
+++ b/targeting/src/app/link-list/link-list.component.html
@@ -1,3 +1,6 @@
-<h4 *ngIf="loading">Loading...</h4>
+
+<div *ngIf="loading">
+    <h4>LOADING</h4>
+</div>
 <hn-link-item *ngFor="let link of allLinks" [link]="link">
 </hn-link-item>
