--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z6">
+<mat-toolbar color="bar" class="mat-elevation-z6">
   <span> <mat-icon>eco</mat-icon>Targeting</span>
 
   <div class="spacer"></div>
