--- a/targeting/src/app/actores/actores.component.html
+++ b/targeting/src/app/actores/actores.component.html
@@ -2,17 +2,20 @@
     <h4>LOADING</h4>
 </div>
 <ng-template #notShow>
-    <button mat-button (click)="openDialog('AddNew',{},null)" mat-flat-button color="primary">Add Row</button>
-<button mat-button (click)="dataSource()" mat-flat-button color="primary">DataSource</button>
+<div align="right">
+    <button mat-icon-button color="success" (click)="dataSource()">
+        <mat-icon>refresh</mat-icon>
+    </button>
+    <button mat-button (click)="openDialog('AddNew',{},null)" mat-flat-button color="primary">Nuevo Actor</button>   
+</div>
 <ejs-treegrid #treegrid 
 [dataSource]="allLinks" 
 [treeColumnIndex]= "1"
 idMapping ="id" parentIdMapping= "parent.id"
 [allowPaging]="true" 
 [pageSettings]="pageSettings" [allowSorting]="true" 
-[allowFiltering]="false"
-[toolbar]="toolbar" 
-[editSettings]="editSettings"
+[allowFiltering]="false" 
+
 
 >
     <e-columns>
@@ -32,23 +35,6 @@ idMapping ="id" parentIdMapping= "parent.id"
         textAlign="Left"
         width= "160"
         ></e-column>
-         
-       <!-- <e-column
-        field="startDate"
-        headerText="Start Date"
-        textAlign="Right"
-        width= "100"
-        format="yMd"
-        editType = "datepickeredit"
-        ></e-column>
-        <e-column
-        field="endDate"
-        headerText="End Date"
-        textAlign="Right"
-        width= "100"
-        format="yMd"
-        editType = "datepickeredit"
-        ></e-column> -->
         <e-column
         field="prioridad"
         headerText="Prioridad"
@@ -58,12 +44,6 @@ idMapping ="id" parentIdMapping= "parent.id"
         editType = "numericedit"
         [edit]="numericParams"
         ></e-column>
-        <!--<e-column
-        field="progress"
-        headerText="Progress"
-        textAlign="Left"
-        width= "60"
-        ></e-column>-->
         <e-column
         field="coments"
         headerText="Comentario"
@@ -72,8 +52,15 @@ idMapping ="id" parentIdMapping= "parent.id"
         ></e-column>
         <e-column width="150"> 
             <ng-template #template let-data> 
-                <button (click)="insert(data)" *ngIf="data.level == 0 || data.level == 1  || data.level == 2">INSERT CHILD</button> 
-                <button mat-flat-button color='primary' (click)="openDialog('Add',{},data)">Add</button>
+                <button mat-icon-button color="primary" (click)="openDialog('Add',{},data)" *ngIf="data.level == 0 || data.level == 1  || data.level == 2">
+                    <mat-icon>person_add</mat-icon>
+                </button>
+                <button mat-icon-button color="accent" (click)="openDialog('Update',data,data)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="openDialog('Delete',data,data)">
+                    <mat-icon>delete</mat-icon>
+                </button>
             </ng-template> 
         </e-column>
     </e-columns>
