--- a/targeting/src/app/theme/theme.component.html
+++ b/targeting/src/app/theme/theme.component.html
@@ -1,40 +1,68 @@
-<table mat-table
-       [dataSource]="dataSource" multiTemplateDataRows
-       class="mat-elevation-z8">
-  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-  </ng-container>
+<div *ngIf="loading; else notShow">
+  <h4>LOADING</h4>
+</div>
+<ng-template #notShow>
+<div align="right">
+  <button mat-icon-button color="success" (click)="dataSource()">
+      <mat-icon>refresh</mat-icon>
+  </button>
+  <button mat-button (click)="openDialog('AddNew',{},null)" mat-flat-button color="primary">Nuevo Tema</button>   
+</div>
+<ejs-treegrid #treegrid 
+[dataSource]="allLinks" 
+[treeColumnIndex]= "1"
+idMapping ="id" parentIdMapping= "parent.id"
+[allowPaging]="true" 
+[pageSettings]="pageSettings" [allowSorting]="true" 
+[allowFiltering]="false" 
 
-  <ng-container matColumnDef="deleteButton" >
-    <th mat-header-cell *matHeaderCellDef > </th>
-    <td mat-cell *matCellDef="let row"> <button mat-button>Sub Actor</button><button mat-button>Edit</button><button mat-button>Delete</button></td>
-  </ng-container>
-  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-      <div class="example-element-detail"
-          [@detailExpand]="checkExpanded(element) ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.position}} </div>
-          <div class="example-element-symbol"> {{element.symbol}} </div>
-          <div class="example-element-name"> {{element.name}} </div>
-          <div class="example-element-weight"> {{element.weight}} </div>
-        </div>
-        <div class="example-element-description">
-          {{element.description}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div>
-      </div>
-    </td>
-  </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay.concat(['deleteButton'])"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplay.concat(['deleteButton']);"
-      class="example-element-row"
-      [class.example-expanded-row]="checkExpanded(element)"
-      (click)="pushPopElement(element)">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-</table>
-
+>
+  <e-columns>
+      <e-column
+      field="id"
+      headerText="TemaID"
+      textAlign="Left"
+      type= "number"
+      width= "90"
+      isPrimaryKey = "true"
+      editType = "numericedit"
+      [edit]="numericParams"
+      ></e-column>
+      <e-column
+      field="name"
+      headerText="Tema Name"
+      textAlign="Left"
+      width= "160"
+      ></e-column>
+      <e-column
+      field="prioridad"
+      headerText="Prioridad"
+      type= "number"
+      textAlign="Left"
+      width= "60"
+      editType = "numericedit"
+      [edit]="numericParams"
+      ></e-column>
+      <e-column
+      field="coments"
+      headerText="Comentario"
+      textAlign="Left"
+      width= "90"
+      ></e-column>
+      <e-column width="150"> 
+          <ng-template #template let-data> 
+              <button mat-icon-button color="primary" (click)="openDialog('Add',{},data)" *ngIf="data.level == 0 || data.level == 1  || data.level == 2">
+                  <mat-icon>person_add</mat-icon>
+              </button>
+              <button mat-icon-button color="accent" (click)="openDialog('Update',data,data)">
+                  <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" (click)="openDialog('Delete',data,data)">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </ng-template> 
+      </e-column>
+  </e-columns>
+</ejs-treegrid>
+</ng-template>
