--- a/targeting/src/app/matriz/matriz.component.html
+++ b/targeting/src/app/matriz/matriz.component.html
@@ -1,75 +1,15 @@
 <!--<ejs-pivotview #pivotview id='PivotView' height='350' [dataSourceSettings]=dataSourceSettings></ejs-pivotview>-->
 <h1>Table</h1>
 <hr>
-<!--<table >
-    <tbody>
-        <tr>
-            <td></td>
-            <td>
-              <table class=" table-bordered">
-                <tbody>
-                  <tr>
-                    <td class="classColor" attr.colspan="{{params.length * modes.length}}">Actores</td>
-                  </tr>
-                  <tr>
-                    <td  class="modeColor" attr.colspan="{{params.length}}" *ngFor = "let column of modes">
-                        {{column}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="paramColor" *ngFor = "let column of combinations;let i = index">{{params[getModule(i)]}}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-              <table class=" table-bordered">
-                <tbody>
-                  <tr>
-                    <td class="classColor">Temas</td>
-                    <td>
-                      <table class="table-bordered">
-                        <tbody>
-                          <tr class="modeColor" *ngFor = "let m of modes">
-                            <td>{{m}}</td>
-                            <td>
-                              <table class="table-bordered">
-                                <tbody>
-                                  <tr class="paramColor" *ngFor = "let p of params">
-                                    <td>{{p}}</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-            <td>
-              <table class="table-bordered">
-                <tbody>
-                  <tr class="test1" *ngFor="let movie of combinations; let i = index">
-                    <td class="test1" *ngFor=" let col of combinations; let j = index">
-                        
-                        ({{i}},{{j}})</td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-    </tbody>
-</table>-->
 
 <table>
   <tbody>
     <tr>
-      <th></th>
+      <th>
+        <div class="center">
+          Actores/Temas
+        </div>
+      </th>
       <th *ngFor = "let column of ParentTemas || [];let i = index">
         {{column.name}}
         <div *ngIf="column">
@@ -121,35 +61,56 @@
           </span>
         </span>
       </th>
-      <th *ngFor = "let tema of ParentTemas"> test</th>
+      <th *ngFor = "let tema of ParentTemas"> 
+        <div *ngFor = "let cell of DatosMatriz">
+          <div *ngIf="cell.TemaParent.id==tema.id && cell.ActorParent.id==actor.id" >
+            {{cell.id}}
+          </div>
+        </div>
+        <h1>{{tema.id}}</h1>
+        <h1>{{actor.id}}</h1>
+        <div>
+          <mat-button-toggle-group #group="matButtonToggleGroup">
+            <mat-button-toggle value="Baja" aria-label="Text align left">
+              <mat-icon class="green-icon">fiber_manual_record</mat-icon>
+            </mat-button-toggle>
+            <mat-button-toggle value="Media" aria-label="Text align center">
+              <mat-icon class="yellow-icon">fiber_manual_record</mat-icon>
+            </mat-button-toggle>
+            <mat-button-toggle value="Alta" aria-label="Text align right">
+              <mat-icon class="red-icon">fiber_manual_record</mat-icon>
+            </mat-button-toggle>
+          </mat-button-toggle-group>
+          <span class="center">Prioridad: {{group.value}}</span>
+        </div>
+        <div>
+          <mat-button-toggle-group #grouptime="matButtonToggleGroup">
+            <mat-button-toggle value="Bajo" aria-label="Text align left">
+              <img src="assets/img/courtblack.gif" />
+            </mat-button-toggle>
+            <mat-button-toggle value="Medio" aria-label="Text align center">
+              <img src="assets/img/moyenblack.gif" />
+            </mat-button-toggle>
+            <mat-button-toggle value="Alto" aria-label="Text align right">
+              <img src="assets/img/longblack.gif" />    
+            </mat-button-toggle>
+          </mat-button-toggle-group>
+          <span class="center">Tiempo: {{grouptime.value}}</span>
+        </div>
+      </th>
     </tr>
   </tbody>
 </table>
 
-<h1>Test</h1>
-<table class="custom-table">
-  <tr>
-    <th></th>
-    <th>First column</th>
-    <th>Second column</th>
-    <th>Third column</th>
-  </tr>
-  <tr>
-    <td>First row</td>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-  </tr>
-  <tr>
-    <td>Second row</td>
-    <td>2</td>
-    <td>4</td>
-    <td>6</td>
-  </tr>
-  <tr>
-    <td>Third row</td>
-    <td>3</td>
-    <td>6</td>
-    <td>9</td>
-  </tr>
-</table>
+<mat-button-toggle-group #group="matButtonToggleGroup">
+  <mat-button-toggle value="Bajo" aria-label="Text align left">
+    <img src="assets/img/courtblack.gif" />
+  </mat-button-toggle>
+  <mat-button-toggle value="Medio" aria-label="Text align center">
+    <img src="assets/img/moyenblack.gif" />
+  </mat-button-toggle>
+  <mat-button-toggle value="Alto" aria-label="Text align right">
+    <img src="assets/img/longblack.gif" />    
+  </mat-button-toggle>
+</mat-button-toggle-group>
+<span class="center">Tiempo: {{group.value}}</span>
