--- a/targeting/src/styles.css
+++ b/targeting/src/styles.css
@@ -66,3 +66,5 @@ input {
   cursor: pointer;
   max-width: 250px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
