--- a/targeting/src/app/actores/actores.component.html
+++ b/targeting/src/app/actores/actores.component.html
@@ -14,7 +14,7 @@
 idMapping ="id" parentIdMapping= "parent.id"
 [allowPaging]="true" 
 [pageSettings]="pageSettings" [allowSorting]="true" 
-[allowFiltering]="false" 
+[allowFiltering]="true" 
 
 
 >
