--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
   <a mat-button routerLink="">Incio</a>
   <a mat-button routerLink="actores">Actores</a>
   <a mat-button routerLink="theme">Temas</a>
-  <a mat-button routerLink="matriz">Colaborativo</a>
+  <a mat-button (click)="dropDatabase($event);">Colaborativo</a>
+  <p-confirmDialog key="confirm-drop-database" header="Drop database" acceptLabel="Nuevo Tablero" rejectLabel="Existente" [(visible)]="confirmDropDatabaseDialogVisible"></p-confirmDialog>
   <a mat-button routerLink="about">Info</a>
   <a mat-button routerLink="list">List</a>
   <a mat-button routerLink="create">List</a>
